--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
     <title>Nodeless Angular</title>
+    <link rel="stylesheet" href="styles.css">
     <script type="text/javascript" src="https://unpkg.com/reflect-metadata@0.1.10"></script>
     <script type="text/javascript" src="https://unpkg.com/angular-polyfills@1.0.1"></script>
     <script type="text/javascript" src="https://unpkg.com/zone.js@0.8.17"></script>
